--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pandas==1.5.3
 scikit-learn==1.2.2
 joblib==1.2.0
 
-# Dependências extras)
-# numpy==1.24.3
-# python-dotenv==1.0.0
+# Fixar numpy e scipy em versões estáveis e compatíveis:
+numpy==1.24.3
+scipy==1.10.1
