--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.95.2
-uvicorn==0.21.1
-pydantic==1.10.7
-pandas==1.5.3
-scikit-learn==1.2.2
-joblib==1.2.0
+fastapi==0.115.11
+uvicorn==0.34.0
+pydantic==2.10.6
+numpy==2.2.3
+pandas==2.2.3
+scipy==1.15.2
+scikit-learn==1.6.1
+joblib==1.4.2
 
 # Fixar numpy e scipy em versões estáveis e compatíveis:
 numpy==1.24.3
